k8s-realtime-demo/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-devops-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: pod-devops
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
